--- a/css/styles.sass
+++ b/css/styles.sass
@@ -20,6 +20,14 @@ figure
 p
    text-align: center
 
+#projects
+   background: rgba(245,245,245,1)
+
+
+
 #projects a
-   display: inline-block
+   display: block
    margin-top: 5%
+
+nav img
+   border-radius: 85%
