--- a/css/styles.sass
+++ b/css/styles.sass
@@ -6,10 +6,16 @@ ul
 
 li
    display: inline-block
+   padding: 1%
 
-li a
+a
    text-decoration: none
 
+a:hover
+   text-decoration: underline
+
+nav
+   text-align: center
 
 footer
    width: 100%
@@ -19,6 +25,7 @@ figure
 
 p
    text-align: center
+   font-family: helvetica, verdana, times new roman
 
 #projects
    background: rgba(245,245,245,1)
@@ -29,5 +36,21 @@ p
    display: block
    margin-top: 5%
 
+
+
 nav img
    border-radius: 85%
+
+footer #links
+   text-align: center
+   margin-bottom: 3%
+
+footer a
+   margin: 0% 2% 
+
+@media(min-width: 600px)
+   #row1 a, #row2 a
+      display:  inline-block
+   
+   #row1 figure, #row2 figure
+      margin: 10px
