--- a/css/styles.sass
+++ b/css/styles.sass
@@ -1,6 +1,10 @@
 html , body 
    height: 100%
 
+header
+   padding-top: 1%
+   background: rgba(235, 235, 235, 1)
+
 ul
    list-style: none
    padding: 0%
@@ -28,20 +32,23 @@ figure
    text-align: center
 
 p
-   text-align: center
    font-family: helvetica, verdana, times new roman
+   width: 65%
+   margin: auto
 
 #projects
-   background: rgba(245,245,245,1)
+   background: rgba(235, 235,235, 1)
+   padding-bottom: 1%
 
 #projects figure
-   margin: 16px 0px   
+   margin: 16px 0px
+
 
 #row1, #row2
    text-align: center
 
 #projects a
-   display: inline-block
+   display: block
    margin: 2.5% 2%
 
 nav img
@@ -54,9 +61,6 @@ footer #links
 footer a
    margin: 0% 2% 
 
-@media(min-width: 600px)
+@media(min-width: 451px)
    #row1 a, #row2 a
       display:  inline-block
-   
-   #row1 figure, #row2 figure
-      margin: 10px
