--- a/css/styles.sass
+++ b/css/styles.sass
@@ -1,9 +1,17 @@
 html , body 
    height: 100%
+   background: rgba(235, 235, 235, 1)
 
 header
    padding-top: 1%
-   background: rgba(235, 235, 235, 1)
+   background: rgba(255, 255, 255, .5)
+
+#myName, #jobTitles
+   display: inline
+
+#jobTitles
+   float: right
+   margin: 0%
 
 ul
    list-style: none
@@ -37,7 +45,7 @@ p
    margin: auto
 
 #projects
-   background: rgba(235, 235,235, 1)
+   background: rgba(255, 255,255, .5)
    padding-bottom: 1%
 
 #projects figure
